feat: connection with SQL

--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
   "author": "Fernando Camou",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mysql2": "^3.14.0",
+    "pg": "^8.14.1",
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.7",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@types/express": "^5.0.1",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^22.13.13",
+    "@types/node": "^22.13.17",
+    "@types/validator": "^13.12.3",
     "concurrently": "^9.1.2",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
