--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "author": "Fernando Camou",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
-    "mysql2": "^3.14.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.17",
